--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.1
   google_fonts: ^1.1.0
+  firebase_auth: ^0.20.0+1
+  firebase_core: ^0.7.0
+  toast: ^0.1.5
+  firebase_database: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +52,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/logo.png
+    - assets/landing_banner.jpeg
     - assets/login_banner.png
     - assets/ayam_geprek.jpg
     - assets/grab.png
